[metadata]
name = Cactool
version = 0.6.0
description = An easy way to collaboratively code social media posts for manual content and discourse analysis
long_description = file: README.md
long_description_content_type = text/markdown
author = Sam Ezeh
author_email = sam.z.ezeh@gmail.com
url = https://cactool.github.io
project_urls =
  Bug Tracker = https://github.com/cactool/cactool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
  requests
  Flask
  Flask_Login
  Flask_SQLAlchemy
  passlib >= 1.7
  Werkzeug
  waitress
  Flask-Migrate
  cryptography >= 36
  appdirs
  pyotp
  qrcode
  beautifulsoup4

[options.package_data]
cactool = defaults/config.json, scripts/*, migrations/*, migrations/**/*, templates/*, templates/**/*, static/**/*

[options.entry_points]
console_scripts =
  cactool = cactool:cactool
